--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html><body><h1>郝海的第一个 github Pages</h1></body></html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>郝海</title>
+</head>
+<body>
+我叫郝海，软件工程师，英文名HaoHai，尤兰达，他们叫我海哥。
+</body>
+</html>
