--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <section id="information">
             <h2>基本信息</h2>
             <img src="photo.jpg" alt="王小波" />
-            <p><span>姓名：</span>王小波</p>
+            <p><span>姓名：</span>郝海</p>
             <p><span>性别：</span>男</p>
             <p><span>出生年月：</span>1989年1月</p>
             <p><span>移动电话：</span>18310393919</p>
             <p><span>电子邮件：</span><a class="print" href="mailto:nobody@example.com">18098168100@163.com</a></p>
-            <p><span>个人网站：</span><a class="print" href="http://example.com/">https://18098168100.github.io//</a></p>
+            <p><span>个人网站：</span><a class="print" href="http://example.com/">https://18098168100.github.io</a></p>
         </section>
         <section id="evaluation">
             <h2>自我评价</h2>
