主页的修改

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>郝海 | 黄金时代</title>
+    <title>个人主页</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body class="nojs">
     <div>
         <section id="information">
             <h2>基本信息</h2>
-            <img src="photo.jpg" alt="王小波" />
+            <img src="photo.jpg" alt="郝海" />
             <p><span>姓名：</span>郝海</p>
             <p><span>性别：</span>男</p>
             <p><span>出生年月：</span>1989年1月</p>
@@ -20,38 +20,85 @@
         </section>
         <section id="evaluation">
             <h2>自我评价</h2>
-            <p>北京人，作家。年轻时在云南农场作过知青，插过队，作过工人、老师。1978年至1982年在中国人民大学学习。1984年前往美国留学。1988年获匹兹堡大学硕士学位。后任教于北京大学和中国人民大学。1992年后开始成为自由撰稿人。1997年4月11日因心脏病突发逝世于北京。</p>
+            <p> 四年Android App开发经验，主要开发项目有《九悦学车-管理端》，《九悦学车-教练端》，《九悦学车-学员端》、《事农》、《财税保》、《生意号》等App,对于Android系统的整体框架及结构有一定的了解。能够熟练使用Android的四大组件(Activity,Service,content Provider, Broadcast Receiver)和七大属性（ComponentName,Action,Category,Data,Extra,Type,Flags），熟练掌握Android触摸事件的传递机制，以及自定义View的绘制流程，可以使用Android WebView Java和JavaScript之间的交互；本人对于Android App的分包以及App的安装、卸载，以及版本的迭代升级有很好的了解。在平时也经常在网上关注一些新的知识，如：KotLin语言，热修复技术，apk的分包技术等，并且可以运用到实际的项目中。在其他方面也有一定的基础，对于汇编语言，C语言的基本使用有一定的了解，并对51单片机，LCD,LED,PLC-200等硬件也有一定的基础。</p>
         </section>
         <section id="experiences">
-            <h2>相关工作经验</h2>
-            <h3><time>1990.08:</time>《唐人秘传故事》</h3>
-            <p>三十七岁出版第一部小说集《唐人秘传故事》，由山东文艺出版社出版，原拟名《唐人故事》，“秘传”二字为编辑擅自添加，未征得作者同意。小说集包括五篇小说：《立新街甲一号与昆仑奴》、《红线盗盒》、《红拂夜奔》、《夜行记》、《舅舅情人》。</p>
-            <h3><time>1992.03:</time>《王二风流史》</h3>
-            <p>由香港繁荣出版社出版。收入三篇小说：《黄金时代》、《三十而立》、《似水流年》。</p>
-            <h3><time>1992.08:</time>《黄金年代》</h3>
-            <p>《黄金年代》（由于编辑的疏忽，“时代”一词误印为“年代”）由台湾联经出版事业公司出版。小说1982年开始酝酿，历经十年，修改多遍方告完成。1991年，该书获第13届《联合报》中篇小说奖，在《联合报》副刊连载，并在台湾出版。在大陆，该书长期以手抄本的形式流传，1997年由花城出版社出版。《黄金时代》与《三十而立》、《似水流年》、《革命时期的爱情》、《我的阴阳两界》四篇小说一起收入小说集《黄金时代》。</p>
-            <h3><time>1997.04:</time>《东宫·西宫》</h3>
-            <p>与张元合著的电影剧本《东宫·西宫》在阿根廷国际电影节上获得最佳编剧奖。同年，由张元导演的电影《东宫·西宫》入围嘎纳电影节。电影以1991年北京一次假借健康调查为名而清算市内同性恋人士的事件作为蓝本，并由当时崭露头角的新星胡军、赵薇等演出。本片荣获阿根廷Mardel Plata电影节的获最佳导演、最佳编剧和最佳摄影奖，以及意大利的Taormina电影节获最佳影片奖和最佳表演奖。</p>
+            <h2>工作经历</h2>
+            <h3><time>2016.09--至今:</time>北京东悦禾科技有限责任公司|android开发工程师</h3>
+            <p>行业类别： 互联网/电子商务|企业性质：民营|规模：20-99人|职位月薪：10001-15000元/月</p>
+			<h3>工作描述：</h3>
+			<p>主要负责《九悦学车-学员端》、《九悦学车-管理端》、《九悦学车-教练端》、《驾驶猫》APP的开发与功能的迭代以及与产品部门业务逻辑的沟通，与接口开发人员接口的对接。 </p>
+            <h3><time>2015.1--2016.8:</time>北京搜斗士有限公司|Android 开发工程师</h3>
+            <p>行业类别： IT服务(系统/数据/维护)|企业性质：民营|规模：1000-9999人|职位月薪：10001-15000元/月</p>
+			<h3>工作描述：</h3>
+			<p>在技术研发部门担任 Android软件工程师 ，主要负责《财税保》、《生意号》APP的开发与功能的迭代，以及项目进度的把控。 </p>
+            <h3><time>2013.9--2014.12:</time>北京农惠宝有限责任公司|手机软件开发工程师</h3>
+            <p>行业类别： 计算机软件|企业性质：民营|规模：20人以下|职位月薪：8001-10000元/月</p>
+			<h3>工作描述：</h3>
+			<p>在技术研发部门担任 Android软件工程师 ，主要负责《事农》APP的开发，以及功能的迭代与更新。</p>
+        </section>
+		<section id="project_experience">
+            <h2>项目经验</h2>
+            <p><time>2016.8--至今:</time></p>
+			<h3>《九悦学车-学员端》</h3>
+			<h3>开发工具：Android studio</h3>
+			<p>主要负责：1、APP的开发与功能的迭代、版本的更新，以及apk的签名，打包，加固，git版本的维护。
+               2、与产品部门之间的沟通和逻辑功能的确定。
+               3、与测试部门，接口开发人员的及时沟通。</p>
+			<h3>项目简介：</h3>
+			<p>项目主要由首页、驾考专家、社区、我的四个fragment界面组成。主要用到的技术有：高德地图，xutils数据库，网络请求的异步处理框架Volley,及图片加载类ImageLoader,WebView与JavaScript之间的交互，友盟的统计与分享，激光推送，融云即时通信，使用MultiDex 64K分包。</p>
+            <p><time>2016.8--至今:</time></p>
+			<h3>《九悦学车-管理端》</h3>
+			<h3>开发工具：Android studio</h3>
+			<p>主要负责：1、APP的开发与功能的迭代、版本的更新，以及apk的签名，打包，加固，git版本的维护。
+               2、与产品部门之间的沟通和逻辑功能的确定。
+               3、与测试部门，接口开发人员的及时沟通。</p>
+			<h3>项目简介：</h3>
+			<p>项目主要由我的驾校和我的两个fragment界面组成。主要用到的技术有：网络请求的异步处理框架Volley,及图片加载类ImageLoader，友盟的统计与分享，激光推送。</p>
+            <p><time>2016.8--至今:</time></p>
+			<h3>《九悦学车-教练端》</h3>
+			<h3>开发工具：Android studio</h3>
+			<p>主要负责：1、APP的开发与功能的迭代、版本的更新，以及apk的签名，打包，加固，git版本的维护。
+               2、与产品部门之间的沟通和逻辑功能的确定。
+               3、与测试部门，接口开发人员的及时沟通。</p>
+			<h3>项目简介：</h3>
+			<p>项目主要由我的驾校和我的两个fragment界面组成。主要用到的技术有：网络请求的异步处理框架Volley,及图片加载类ImageLoader，友盟的统计与分享，激光推送。</p>
+            <p><time>2015.1--2016.8:</time></p>
+			<h3>《生意号》</h3>
+			<h3>开发工具：eclipse</h3>
+			<p>主要负责： 担任开发成员角色，项目整体结构分为左侧滑菜单和主页这四个 Fragment,通过选择左侧滑菜单或点击上面相对应的监听按钮来选取子版块,分为首页,联系人商机,以及我的。在首页当中，整体布局由一个自定义gridview来快捷展示其功能，并添加搜索框，去搜索公司的产品，企业，以及商机。 侧栏进入后由自定义scrollview完成展示广告轮播与listview；在联系人界面可以添加联系人，并且通过默认排序，或者分组显示两种方法展示到界面，并且附加通话记录的展示。商机界面由，订阅商机，匹配商机，通话记录三个子fragment来显示。我的，用来显示个人信息。</p>
+			<h3>项目简介：</h3>
+			<p>生意号是业界首款免费为中小企业提供营销推广和企业服务的APP，快捷生成企业电子海报，电子名片，微信、QQ全社交平台同时分享，10亿产品信息、1500万工商认证企业信息查询；每天80万商机推送；无抵押快速贷款、免费财税分析记账等多重企业服务；分组进行企业人脉管理 ，是您的移动营销助手。</p>
+            <p><time>2015.1--2016.8:</time></p>
+			<h3>《财税保》</h3>
+			<h3>开发工具：eclipse</h3>
+			<p>主要负责： 担任开发成员角色，负责整个项目功能的实现，及任务的分配。</p>
+			<h3>项目简介：</h3>
+			<p>财税保app下载手机版是一款生活财税服务类应用软件。在这里，你可以随时随地查看报表和轻松掌握记账报税进度，税务筹划，缴税更合理，政策分享很及时，建站推广，资金扶持，一站助力企业发展。</p>
+            <p><time>2013.9--2014.12:</time></p>
+			<h3>《农惠宝》</h3>
+			<h3>开发工具：eclipse</h3>
+			<p>主要负责： 担任开发成员角色，项目整体结构主要由四个Fragment组成，首页由定位，广告轮播，以及我的农机，作业方式等点击按钮组成。作业方式界面，有Viewpager来实现三种作业模式的切换，作业模式包括：实时作业，绕地作业，拐点作业。并添加相应作业方式的语音播报，以及在手机屏幕常亮模式的设置，发现界面，主要由用于聊天的私信按钮，还有农机发布按钮，以及农机问答的界面。,</p>
+			<h3>项目简介：</h3>
+			<p>农惠宝（专业版）系统是基于卫星定位、网络地理信息系统、卫星遥感、地块矢量图层和移动通信等技术的农机移动监控与调度管理系统和农田地块作业管理系统。 建立的C-P-T （计算机－移动指挥终端－移动定位终端）农机移动监控与指挥模式，旨在实现农机资源的合理配置和有效调度、管理。可满足不同规模机组。主要的技术：高德地图，wifi、蓝牙等技术</p>
         </section>
         <section id="education">
-            <h2>教育背景</h2>
-            <p><time>1965-1968:</time>北京二龙路中学</p>
-            <p><time>1978-1982:</time>中国人民大学，贸易经济系学生</p>
-            <p><time>1984-1988:</time>美国匹兹堡大学，东亚研究中心</p>
+            <h2>教育经历</h2>
+            <p><time>2009.9--2013.7:</time>湖北师范大学|计算机科学与技术|本科|统招</p>
         </section>
         <section id="languages">
-            <h2>外语能力</h2>
-            <p>目测很不错。曾赴美国留学，在匹兹堡大学东亚研究中心获得硕士学位。</p>
+            <h2>语言能力</h2>
+            <p>英语 ：读写能力一般| 听说能力一般</p>
         </section>
         <section id="about">
             <h2>关于该简历</h2>
             <p class="screen">该简历页面使用前端技术制作，代码易读，语义清晰，兼容主流的现代浏览器，对旧浏览器提供有限的降级支持。页面采用响应式设计，在桌面和移动设备上均有良好表现。本着绿色环保低碳的原则，页面对打印样式也做了相应优化，您可通过浏览器的打印预览功能查看效果，并放心的将其打印为纸质文档。</p>
-            <p class="print">该文档打印自在线版简历，您可通过地址 http://myst729.github.io/Resume/ 访问。</p>
+            <p class="print">该文档打印自在线版简历，您可通过地址 https://18098168100.github.io 访问。</p>
             <p class="print">在线版简历页面使用前端技术制作，代码易读，语义清晰，兼容主流的现代浏览器，对旧浏览器提供有限的降级支持。页面采用响应式设计，在桌面和移动设备上均有良好表现。本着绿色环保低碳的原则，页面对打印样式做了相应优化，访问在线版地址，您可获得不同于纸质文档的舒适的阅读体验。</p>
         </section>
     </div>
     <footer>
-        <p>2012 &copy; <a href="http://forcefront.com/" title="forcefront.com">force:front</a></p>
+        <p>2018 &copy; <a href="https://i.zhaopin.com/" title="zhilian.com">force:front</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
