--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="information">
             <h2>基本信息</h2>
             <img src="photo.jpg" alt="郝海" />
-            <p><span>姓名：</span>郝海</p>
+            <p><span>姓名：</span>郝0海</p>
             <p><span>性别：</span>男</p>
             <p><span>出生年月：</span>1989年1月</p>
             <p><span>移动电话：</span>18310393919</p>
