--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="information">
             <h2>基本信息</h2>
             <img src="photo.jpg" alt="郝海" />
-            <p><span>姓名：</span>郝0海</p>
+            <p><span>姓名：</span>郝海</p>
             <p><span>性别：</span>男</p>
             <p><span>出生年月：</span>1989年1月</p>
             <p><span>移动电话：</span>18310393919</p>
@@ -28,14 +28,10 @@
             <p>行业类别： 互联网/电子商务|企业性质：民营|规模：20-99人|职位月薪：10001-15000元/月</p>
 			<h3>工作描述：</h3>
 			<p>主要负责《九悦学车-学员端》、《九悦学车-管理端》、《九悦学车-教练端》、《驾驶猫》APP的开发与功能的迭代以及与产品部门业务逻辑的沟通，与接口开发人员接口的对接。 </p>
-            <h3><time>2015.1--2016.8:</time>北京搜斗士有限公司|Android 开发工程师</h3>
+            <h3><time>2013.7--2016.8:</time>北京搜斗士有限公司|Android 开发工程师</h3>
             <p>行业类别： IT服务(系统/数据/维护)|企业性质：民营|规模：1000-9999人|职位月薪：10001-15000元/月</p>
 			<h3>工作描述：</h3>
 			<p>在技术研发部门担任 Android软件工程师 ，主要负责《财税保》、《生意号》APP的开发与功能的迭代，以及项目进度的把控。 </p>
-            <h3><time>2013.9--2014.12:</time>北京农惠宝有限责任公司|手机软件开发工程师</h3>
-            <p>行业类别： 计算机软件|企业性质：民营|规模：20人以下|职位月薪：8001-10000元/月</p>
-			<h3>工作描述：</h3>
-			<p>在技术研发部门担任 Android软件工程师 ，主要负责《事农》APP的开发，以及功能的迭代与更新。</p>
         </section>
 		<section id="project_experience">
             <h2>项目经验</h2>
@@ -75,12 +71,6 @@
 			<p>主要负责： 担任开发成员角色，负责整个项目功能的实现，及任务的分配。</p>
 			<h3>项目简介：</h3>
 			<p>财税保app下载手机版是一款生活财税服务类应用软件。在这里，你可以随时随地查看报表和轻松掌握记账报税进度，税务筹划，缴税更合理，政策分享很及时，建站推广，资金扶持，一站助力企业发展。</p>
-            <p><time>2013.9--2014.12:</time></p>
-			<h3>《农惠宝》</h3>
-			<h3>开发工具：eclipse</h3>
-			<p>主要负责： 担任开发成员角色，项目整体结构主要由四个Fragment组成，首页由定位，广告轮播，以及我的农机，作业方式等点击按钮组成。作业方式界面，有Viewpager来实现三种作业模式的切换，作业模式包括：实时作业，绕地作业，拐点作业。并添加相应作业方式的语音播报，以及在手机屏幕常亮模式的设置，发现界面，主要由用于聊天的私信按钮，还有农机发布按钮，以及农机问答的界面。,</p>
-			<h3>项目简介：</h3>
-			<p>农惠宝（专业版）系统是基于卫星定位、网络地理信息系统、卫星遥感、地块矢量图层和移动通信等技术的农机移动监控与调度管理系统和农田地块作业管理系统。 建立的C-P-T （计算机－移动指挥终端－移动定位终端）农机移动监控与指挥模式，旨在实现农机资源的合理配置和有效调度、管理。可满足不同规模机组。主要的技术：高德地图，wifi、蓝牙等技术</p>
         </section>
         <section id="education">
             <h2>教育经历</h2>
